# chatroom-ws2020

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  client.ts  docker-compose.yaml  package.json  server.ts  tsconfig.json
client/: chat-client.ts  index.ts
libs/client-utils/: BUILD.bazel  index.ts  state.helper.ts  tsconfig.json
libs/client-utils/websocket-store/: websocket.actions.ts  websocket.effects.ts  websocket.reducer.ts  websocket.selectors.ts
libs/common/: BUILD.bazel  index.ts  remove-id-prop.ts  tsconfig.json
libs/enums/: BUILD.bazel  http-api.ts  index.ts  message-type.ts
libs/schema/: BUILD.bazel  admin.schema.ts  auth.schema.ts  index.ts  log.schema.ts  message.schema.ts  room.schema.ts  socket.schema.ts  tsconfig.json  user.schema.ts
libs/shared-ui/: BUILD.bazel  avatar.component.sass  avatar.component.ts  index.ts  room-icon.component.sass  room-icon.component.ts  shared-ui.module.ts  tsconfig.json
server/: chat-server.ts  index.ts
services/server/: BUILD.bazel  admin-routes.ts  anonymous-controllers.ts  auth-token.ts  client-room-controllers.ts  config.ts  database.ts  http-server.ts  index.ts  models.ts  push-user-controllers.ts  room-controllers.ts  server-room-controllers.ts  socket-controller.ts  socket-message.ts  token.ts  user-routes.ts  utils.ts  websocket-server.ts
services/server-client/: BUILD.bazel  main.html  main.prod.ts  styles.sass  tsconfig.json
services/server-client/app/: BUILD.bazel  app-initializer.ts  app-prod.module.ts  app-routing.module.ts  app.component.sass  app.component.ts
services/server-client/assets/: BUILD.bazel
services/server-client/features/home/: BUILD.bazel  home.component.sass  home.component.ts  home.module.ts  logs.component.sass  logs.component.ts  rooms.component.sass  rooms.component.ts  users.component.sass  users.component.ts
services/server-client/services/: BUILD.bazel  websocket.service.ts
services/server-client/shared/: BUILD.bazel  routes.ts
services/server-client/store/: BUILD.bazel  index.ts  store.module.ts
services/server-client/store/auth/: auth.actions.ts  auth.effects.ts  auth.reducer.ts  auth.selectors.ts
services/server-client/store/logs/: index.ts  logs.actions.ts  logs.effects.ts  logs.reducer.ts  logs.selectors.ts
services/server-client/store/rooms/: rooms.actions.ts  rooms.effects.ts  rooms.reducer.ts  rooms.selectors.ts
services/server-client/store/users/: users.actions.ts  users.effects.ts  users.reducer.ts  users.selectors.ts
services/server-client/store/websocket/: index.ts  websocket.actions.ts  websocket.effects.ts
services/user-client/: BUILD.bazel  main.html  styles.sass  tsconfig.json
services/user-client/app/: BUILD.bazel  app-base.module.ts  app-dev.module.ts  app-initializer.ts  app-routing.module.ts  app.component.ts
services/user-client/assets/: BUILD.bazel
services/user-client/features/home/: BUILD.bazel  content.component.sass  content.component.ts  home.component.sass  home.component.ts  home.module.ts  rooms.component.sass  rooms.component.ts  side-panel.component.sass  side-panel.component.ts
services/user-client/features/signin/: BUILD.bazel  signin.component.sass  signin.component.ts  signin.module.ts  signin.reducer.ts
services/user-client/guards/: BUILD.bazel  auth.guard.ts
services/user-client/services/: BUILD.bazel  websocket.service.ts
services/user-client/shared/: BUILD.bazel  routes.ts
services/user-client/store/: BUILD.bazel  index.ts  store.module.ts
services/user-client/store/auth/: auth.actions.ts  auth.effects.ts  auth.reducer.ts  auth.selectors.ts  index.ts
services/user-client/store/push/: index.ts  push.actions.ts  push.effects.ts  push.reducer.ts  push.selectors.ts
services/user-client/store/rooms/: index.ts  messages.reducer.ts  rooms.actions.ts  rooms.effects.ts  rooms.reducer.ts  rooms.selectors.ts
services/user-client/store/users/: users.reducer.ts  users.selectors.ts
services/user-client/store/websocket/: websocket.effects.ts
shared/: events.ts  index.ts  message.ts  user-message.ts
tools/: rollup.config.js  rxjs_shims.js
