load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_library(
    name = "lib",
    srcs = glob(["*.ts"]),
    tsconfig = "tsconfig",
    deps = [
        "@npm//@types/node",
        "@npm//@types/ws",
        "@npm//ws",
    ],
)

nodejs_binary(
    name = "server",
    data = ["lib"],
    entry_point = "index.ts",
    templated_args = ["--bazel_patch_module_resolver"],
)
