load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig"],
)

ts_library(
    name = "lib",
    srcs = glob(["*.ts"]),
    tsconfig = "tsconfig",
    deps = [
        "//libs/common",
        "//libs/enums",
        "//libs/schema",
        "@npm//@types/bcrypt",
        "@npm//@types/jsonwebtoken",
        "@npm//@types/mongodb",
        "@npm//@types/node",
        "@npm//@types/uuid",
        "@npm//@types/ws",
        "@npm//bcrypt",
        "@npm//jsonwebtoken",
        "@npm//mongodb",
        "@npm//uuid",
        "@npm//ws",
    ],
)

nodejs_binary(
    name = "server",
    data = ["lib"],
    entry_point = "index.ts",
    templated_args = ["--bazel_patch_module_resolver"],
)
