load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/server-client:__subpackages__"])

sass_binary(
    name = "app_styles",
    src = "app.component.sass",
)

ng_ts_library(
    name = "base",
    srcs = [
        "app.component.ts",
        "app-base.module.ts",
        "app-initializer.ts",
        "app-routing.module.ts",
    ],
    angular_assets = ["app_styles"],
    tsconfig = "//services/server-client:tsconfig.json",
    deps = [
        "//libs/client-utils",
        "//services/server-client/features/home",
        "//services/server-client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)

ng_ts_library(
    name = "dev",
    srcs = ["app-dev.module.ts"],
    tsconfig = "//services/server-client:tsconfig.json",
    deps = [
        "base",
        "//services/server-client/store",
        "@npm//@angular/core",
        "@npm//@ngrx/store-devtools",
    ],
)

ng_ts_library(
    name = "prod",
    srcs = ["app-prod.module.ts"],
    tsconfig = "//services/server-client:tsconfig.json",
    deps = [
        "base",
        "//services/server-client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
    ],
)
