load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/server-client:__subpackages__"])

ng_ts_library(
    name = "services",
    srcs = glob(["**/*.ts"]),
    module_name = "@services",
    tsconfig = "//services/server-client:tsconfig.json",
    deps = [
        "@npm//@angular/core",
    ],
)
