load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/user-client:__subpackages__"])

ng_ts_library(
    name = "guards",
    srcs = glob(["**/*.ts"]),
    module_name = "@guards",
    tsconfig = "//services/user-client:tsconfig.json",
    deps = [
        "//services/user-client/store",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
