load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/user-client:__subpackages__"])

ng_ts_library(
    name = "services",
    srcs = glob(["**/*.ts"]),
    module_name = "@services",
    tsconfig = "//services/user-client:tsconfig.json",
    deps = [
        "@npm//@angular/core",
    ],
)
