load("//tools:angular_ts_library.bzl", "ng_ts_library")

package(default_visibility = ["//services/user-client:__subpackages__"])

ng_ts_library(
    name = "store",
    srcs = glob(["**/*.ts"]),
    module_name = "@store",
    tsconfig = "//services/user-client:tsconfig.json",
    deps = [
        "//libs/client-utils",
        "//libs/schema",
        "//services/user-client/services",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/router-store",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
