load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//services/server-client:__subpackages__"])

sass_binary(
    name = "styles",
    src = "home.component.sass",
)

ng_ts_library(
    name = "home",
    srcs = glob(["*.ts"]),
    angular_assets = ["styles"],
    tsconfig = "//services/server-client:tsconfig",
    deps = [
        "//libs/client-utils",
        "//libs/enums",
        "//libs/schema",
        "//libs/shared-ui",
        "//services/server-client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
