load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//services/user-client:__subpackages__"])

sass_binary(
    name = "styles",
    src = "home.component.sass",
)

sass_binary(
    name = "avatar_styles",
    src = "avatar.component.sass",
)

ng_ts_library(
    name = "home",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "styles",
        "avatar_styles",
    ],
    tsconfig = "//services/user-client:tsconfig",
    deps = [
        "//libs/client-utils",
        "//libs/schema",
        "//services/user-client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
