load("//tools:angular_ts_library.bzl", "ng_ts_library")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//services/user-client:__subpackages__"])

sass_binary(
    name = "styles",
    src = "home.component.sass",
)

sass_binary(
    name = "rooms_styles",
    src = "rooms.component.sass",
)

sass_binary(
    name = "side_panel_styles",
    src = "side-panel.component.sass",
)

ng_ts_library(
    name = "home",
    srcs = glob(["*.ts"]),
    angular_assets = [
        "styles",
        "rooms_styles",
        "side_panel_styles",
    ],
    tsconfig = "//services/user-client:tsconfig",
    deps = [
        "//libs/client-utils",
        "//libs/schema",
        "//libs/shared-ui",
        "//services/user-client/store",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
        "@npm//@ngrx/effects",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
